<resources>
    <string name="app_name">COVID19 Dashboard</string>
    <string name="deaths">Total Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="cases_worldwide">Cases Worldwide</string>
    <string name="today_cases">Today Cases</string>
    <string name="active_cases">Active Cases</string>
    <string name="dashboard">Dashboard</string>
    <string name="critical">Critical</string>
    <string name="_0">0</string>
</resources>