<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/worldwide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cases_worldwide"
            android:textAlignment="center"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="38dp" />

        <TextView
            android:id="@+id/tvCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/_0"
            android:textColor="@color/Color_low_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="83dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/recovered"
            android:textColor="#0E0D0D"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/_0"
            android:textColor="@color/Color_recovered"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ok2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/deaths"
            android:textColor="@color/Color_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/_0"
            android:textColor="@color/Color_Death"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/today_cases"
            android:textColor="@color/Color_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvTodayCases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/_0"
            android:textColor="@color/Color_low_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/critical"
            android:textColor="@color/Color_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvCritical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/_0"
            android:textColor="@color/Color_low_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/active_cases"
            android:textColor="@color/Color_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:text="@string/_0"
            android:textColor="@color/Color_low_text"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>